argocd/ingresses/06-opensearch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-dashboards
  namespace: opensearch
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - opensearch.44.203.188.20.nip.io
      secretName: opensearch-dashboards-ingress-tls
  rules:
    - host: opensearch.44.203.188.20.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-dashboard-opensearch-dashboards
                port:
                  number: 5601
